--- a/extensions/experiences/configure_aws_network/setup.yml
+++ b/extensions/experiences/configure_aws_network/setup.yml
@@ -26,6 +26,8 @@ controller_projects:
 #
 controller_templates:
   - name: AWS Operations / Configure AWS Network for EC2
+    ask_inventory_on_launch: true
+    ask_execution_environment_on_launch: true
     description: This job template creates the necessary network infrastructure needed to configure AWS EC2 instance
     project: AWS Operations / Configure AWS Network Experience Project
     playbook: extensions/experiences/configure_aws_network/playbooks/run_configure_aws_network.yaml
