--- a/roles/ec2_instance_create/tasks/ec2_instance_create_operations.yml
+++ b/roles/ec2_instance_create/tasks/ec2_instance_create_operations.yml
@@ -5,7 +5,7 @@
       ansible.builtin.fail:
         msg: "ec2_instance_create_external_sg_id and ec2_instance_create_associate_external_sg are mutually exlcusive.
               Please provide only one to either associate existing or create new sg."
-      when: ec2_instance_create_external_sg_id != None and ec2_instance_create_associate_external_sg is true
+      when: ec2_instance_create_external_sg_id is defined and ec2_instance_create_associate_external_sg is defined and ec2_instance_create_external_sg_id != None and ec2_instance_create_associate_external_sg is true
 
 - name: Verify that the instance and security group with same name does not exist
   block:
