--- a/roles/ec2_instance_create/tasks/ec2_instance_delete_operations.yml
+++ b/roles/ec2_instance_create/tasks/ec2_instance_delete_operations.yml
@@ -11,14 +11,17 @@
     tags: "{{ ec2_instance_create_tags | default(omit) }}"
     wait: "{{ ec2_instance_create_wait_for_boot }}"
     state: absent
+  when: ec2_instance_create_instance_name is defined and ec2_instance_create_instance_name | length > 0
 
 - name: Delete security group if created
   amazon.aws.ec2_security_group:
     name: "{{ ec2_instance_create_external_sg_name | default('ec2_instance_create-default-external-sg') }}"
     state: absent
+  when: ec2_instance_create_associate_external_sg is defined and ec2_instance_create_associate_external_sg is true
 
 - name: Detach and delete Internet Gateway if created
   amazon.aws.ec2_vpc_igw:
     region: "{{ ec2_instance_create_aws_region }}"
     vpc_id: "{{ ec2_instance_create_vpc_id }}"
     state: absent
+  when: ec2_instance_create_associate_igw is defined and ec2_instance_create_associate_igw is true
