--- a/roles/ec2_instance_create/tasks/main.yml
+++ b/roles/ec2_instance_create/tasks/main.yml
@@ -4,9 +4,9 @@
     group/aws: "{{ aws_setup_credentials__output }}"
   block:
     - name: Include create operations
-      include_tasks: ec2_instance_create_operations.yml
+      ansible.builtin.include_tasks: ec2_instance_create_operations.yml
       when: ec2_instance_create_operation == 'create'
 
     - name: Include delete operations
-      include_tasks: ec2_instance_delete_operations.yml
+      ansible.builtin.include_tasks: ec2_instance_delete_operations.yml
       when: ec2_instance_create_operation == 'delete'
