--- a/tests/integration/targets/test_ec2_instance_create/tasks/test_ec2_with_igw_sg_eip.yml
+++ b/tests/integration/targets/test_ec2_instance_create/tasks/test_ec2_with_igw_sg_eip.yml
@@ -1,6 +1,6 @@
 ---
 - block:
-  - name: Create EC2 instance with no external SG, no IGW, no EIP
+  - name: Create EC2 instance with external SG, IGW, EIP
     ansible.builtin.include_role:
       name: cloud.aws_ops.ec2_instance_create
     vars:
