--- a/roles/ec2_instance_create/defaults/main.yml
+++ b/roles/ec2_instance_create/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+ec2_instance_create_operation: create
 ec2_instance_create_associate_eip: false
 ec2_instance_create_associate_external_sg: false
 ec2_instance_create_associate_igw: false
