--- a/roles/ec2_instance_create/meta/argument_specs.yml
+++ b/roles/ec2_instance_create/meta/argument_specs.yml
@@ -63,7 +63,7 @@ argument_specs:
         type: bool
       ec2_instance_create_associate_external_sg:
         description:
-          - Whether to create and associate a security group for external access.
+          - Whether to associate an existing or a new security group for external access.
         required: false
         default: false
         type: bool
@@ -94,11 +94,6 @@ argument_specs:
         description:
           - The ID of the VPC used for security group and internet gateway.
           - This is required when `ec2_instance_create_associate_external_sg` or `ec2_instance_create_associate_igw` is `true`.
-        required: false
-        type: str
-      ec2_instance_create_external_sg_id:
-        description:
-          - The ID or name of the security group to be associated with EC2 instance.
         required: false
         type: str
       ec2_instance_create_eip_tags:
