--- a/roles/ec2_instance_create_delete/meta/argument_specs.yml
+++ b/roles/ec2_instance_create_delete/meta/argument_specs.yml
@@ -7,107 +7,107 @@ argument_specs:
       - Optionally can create a security group and associate an Elastic IP with the instance.
       - Supports custom configurations for instance settings, including instance type, AMI, key pair, tags, VPC/subnet, and networking configurations.
     options:
-      ec2_instance_create_operation:
+      ec2_instance_create_delete_operation:
         description:
           - Whether to create or delete resources using the role.
         required: false
         type: str
         default: create
         choices: [create, delete]
-      ec2_instance_create_aws_region:
+      ec2_instance_create_delete_aws_region:
         description:
           - The AWS region in which to create the EC2 instance.
         required: true
         type: str
-      ec2_instance_create_instance_name:
+      ec2_instance_create_delete_instance_name:
         description:
           - The name of the EC2 instance to be created.
         required: true
         type: str
-      ec2_instance_create_instance_type:
+      ec2_instance_create_delete_instance_type:
         description:
           - The instance type for the EC2 instance.
         required: true
         type: str
-      ec2_instance_create_ami_id:
+      ec2_instance_create_delete_ami_id:
         description:
           - The AMI ID for the EC2 instance.
         required: true
         type: str
-      ec2_instance_create_key_name:
+      ec2_instance_create_delete_key_name:
         description:
           - The name of the key pair to use for SSH access to the EC2 instance.
-        required: true
+        required: false
         type: str
-      ec2_instance_create_vpc_subnet_id:
+      ec2_instance_create_delete_vpc_subnet_id:
         description:
           - The ID of the VPC subnet in which the instance will be launched.
-        required: true
+        required: false
         type: str
-      ec2_instance_create_tags:
+      ec2_instance_create_delete_tags:
         description:
           - A dictionary of tags to assign to the EC2 instance.
         required: false
         type: dict
-      ec2_instance_create_wait_for_boot:
+      ec2_instance_create_delete_wait_for_boot:
         description:
           - Whether to wait for the EC2 instance to be in the running state before continuing.
         required: false
         default: true
         type: bool
-      ec2_instance_create_associate_eip:
+      ec2_instance_create_delete_associate_eip:
         description:
           - Whether to create and associate an Elastic IP (EIP) with the EC2 instance.
         required: false
         default: false
         type: bool
-      ec2_instance_create_associate_external_sg:
+      ec2_instance_create_delete_associate_external_sg:
         description:
           - Whether to associate an existing or a new security group for external access.
         required: false
         default: false
         type: bool
-      ec2_instance_create_external_sg_name:
+      ec2_instance_create_delete_external_sg_name:
         description:
           - The name of the security group to create.
         required: false
         default: "ec2_instance_create-default-external-sg"
         type: str
-      ec2_instance_create_external_sg_description:
+      ec2_instance_create_delete_external_sg_description:
         description:
           - A description of the security group.
         required: false
         default: "Security group for external access"
         type: str
-      ec2_instance_create_external_sg_tags:
+      ec2_instance_create_delete_external_sg_tags:
         description:
           - Tags to assign to the security group.
         required: false
         type: dict
-      ec2_instance_create_associate_igw:
+      ec2_instance_create_delete_associate_igw:
         description:
           - Whether to create and associate an internal gateway.
         required: false
         default: false
         type: bool
-      ec2_instance_create_vpc_id:
+      ec2_instance_create_delete_vpc_id:
         description:
           - The ID of the VPC used for security group and internet gateway.
-          - This is required when `ec2_instance_create_associate_external_sg` or `ec2_instance_create_associate_igw` is `true`.
+          - This is required when `ec2_instance_create_delete_associate_external_sg` or `ec2_instance_create_delete_associate_igw` is `true`.
         required: false
         type: str
-      ec2_instance_create_eip_tags:
+      ec2_instance_create_delete_eip_tags:
         description:
           - Tags to assign to the Elastic IP.
         required: false
         type: dict
-      ec2_instance_create_external_sg_rules:
+      ec2_instance_create_delete_external_sg_rules:
         description:
           - A list of dict containing custom rules to add to the security group. Each rule is a dictionary with `proto`, `ports`, and `cidr_ip` keys. Default is to allow SSH (port 22) from `0.0.0.0/0`.
         required: false
         type: list
         elements: dict
-      ec2_instance_create_igw_tags:
+      ec2_instance_create_delete_igw_tags:
         description:
           - Tags to assign to the internet gateway.
         required: false
