--- a/extensions/patterns/configure_aws_network/playbooks/run_configure_aws_network.yaml
+++ b/extensions/patterns/configure_aws_network/playbooks/run_configure_aws_network.yaml
@@ -40,6 +40,6 @@
         ec2_networking_resources_vpc_name: "{{ vpc_name }}"
         ec2_networking_resources_vpc_cidr_block: "{{ vpc_cidr }}"
         ec2_networking_resources_subnet_cidr_block: "{{ subnet }}"
-        ec2_networking_resources_sg_internal_name: "{{ security_group_internal }}"
+        ec2_networking_resources_sg_internal_name: "{{ security_group_internal_name }}"
         ec2_networking_resources_sg_internal_description: "{{ security_group_internal_description }}"
         ec2_networking_resources_sg_internal_rules: "{{ sg_internal_rules }}"
