--- a/extensions/patterns/configure_aws_network/template_surveys/configure_aws_network.yml
+++ b/extensions/patterns/configure_aws_network/template_surveys/configure_aws_network.yml
@@ -29,13 +29,13 @@ spec:
   - type: "text"
     question_name: "Internal Security Group name"
     question_description: "The name of the security group to create."
-    variable: "security_group_internal"
+    variable: "security_group_internal_name"
     required: true
 
   - type: "text"
     question_name: "Internal Security Group description"
     question_description: "The name of the security group to create."
-    variable: "security_group_internal"
+    variable: "security_group_internal_description"
     required: true
 
   - type: "text"
