--- a/tests/integration/targets/test_ec2_networking_resources/defaults/main.yml
+++ b/tests/integration/targets/test_ec2_networking_resources/defaults/main.yml
@@ -4,5 +4,4 @@ aws_security_token: "{{ security_token | default(omit) }}"
 vpc_name: "{{ resource_prefix }}-vpc"
 vpc_cidr_block: "10.0.1.0/24"
 subnet_cidr_block: "10.0.1.0/26"
-internal_sg_name: "{{ resource_prefix }}-internal-sg"
-external_sg_name: "{{ resource_prefix }}-external-sg"
+sg_name: "{{ resource_prefix }}-sg"
