--- a/tests/integration/targets/test_ec2_networking_resources/tasks/test_all_options.yml
+++ b/tests/integration/targets/test_ec2_networking_resources/tasks/test_all_options.yml
@@ -7,18 +7,12 @@
     ec2_networking_resources_vpc_name: "{{ vpc_name }}"
     ec2_networking_resources_vpc_cidr_block: "{{ vpc_cidr_block }}"
     ec2_networking_resources_subnet_cidr_block: "{{ subnet_cidr_block }}"
-    ec2_networking_resources_sg_internal_name: "{{ internal_sg_name }}"
-    ec2_networking_resources_sg_internal_description: "Test internal sg"
-    ec2_networking_resources_sg_internal_rules:
+    ec2_networking_resources_sg_name: "{{ sg_name }}"
+    ec2_networking_resources_sg_description: "Test sg"
+    ec2_networking_resources_sg_irules:
       - proto: tcp
         ports: 22
         cidr_ip: "{{ vpc_cidr_block }}"
-    ec2_networking_resources_sg_external_name: "{{ external_sg_name }}"
-    ec2_networking_resources_sg_external_description: "Test external sg"
-    ec2_networking_resources_sg_external_rules:
-      - proto: tcp
-        ports: 443
-        cidr_ip: 0.0.0.0/0
     ec2_networking_resources_create_igw: true
 
 - name: Get the created VPC
@@ -47,39 +41,22 @@
       - _subnet.subnets | length == 1
       - _subnet.subnets[0].cidr_block == subnet_cidr_block
 
-- name: Get internal security group
+- name: Get security group
   amazon.aws.ec2_security_group_info:
     filters:
-      group-name: "{{ internal_sg_name }}"
-  register: _internal_security_group
+      group-name: "{{ sg_name }}"
+  register: _security_group
 
-- name: Assert internal security group has been created
+- name: Assert security group has been created
   ansible.builtin.assert:
     that:
-      - _internal_security_group.security_groups | length == 1
+      - _security_group.security_groups | length == 1
       - _sg_rule.from_port == 22
       - _sg_rule.to_port == 22
       - _sg_rule.ip_protocol == "tcp"
       - _sg_rule.ip_ranges[0].cidr_ip == vpc_cidr_block
   vars:
-    _sg_rule: "{{ _internal_security_group.security_groups[0].ip_permissions[0] }}"
-
-- name: Get external security group
-  amazon.aws.ec2_security_group_info:
-    filters:
-      group-name: "{{ external_sg_name }}"
-  register: _external_security_group
-
-- name: Assert external security group has been created
-  ansible.builtin.assert:
-    that:
-      - _external_security_group.security_groups | length == 1
-      - _sg_rule.from_port == 443
-      - _sg_rule.to_port == 443
-      - _sg_rule.ip_protocol == "tcp"
-      - _sg_rule.ip_ranges[0].cidr_ip == "0.0.0.0/0"
-  vars:
-    _sg_rule: "{{ _external_security_group.security_groups[0].ip_permissions[0] }}"
+    _sg_rule: "{{ _security_group.security_groups[0].ip_permissions[0] }}"
 
 - name: Get internet gateway
   amazon.aws.ec2_vpc_igw_info:
@@ -138,27 +115,16 @@
     that:
       - _deleted_subnet.subnets | length == 0
 
-- name: Get the deleted internal security group
+- name: Get the deleted security group
   amazon.aws.ec2_security_group_info:
     filters:
-      group-name: "{{ internal_sg_name }}"
-  register: _deleted_internal_security_group
+      group-name: "{{ sg_name }}"
+  register: _deleted_security_group
 
-- name: Assert internal security group has been deleted
+- name: Assert security group has been deleted
   ansible.builtin.assert:
     that:
-      - _deleted_internal_security_group.security_groups | length == 0
-
-- name: Get the deleted external security group
-  amazon.aws.ec2_security_group_info:
-    filters:
-      group-name: "{{ external_sg_name }}"
-  register: _deleted_external_security_group
-
-- name: Assert external security group has been deleted
-  ansible.builtin.assert:
-    that:
-      - _deleted_external_security_group.security_groups | length == 0
+      - _deleted_security_group.security_groups | length == 0
 
 - name: Get the deleted internet gateway
   amazon.aws.ec2_vpc_igw_info:
